styled shop footer and fixed overflowing shop price

--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@
 
 body {
     font-family: 'Eiko', serif;
+    word-spacing: 0.2rem;
     margin: 0;
 }
 
