--- a/src/styles/Cart-summary-item.css
+++ b/src/styles/Cart-summary-item.css
@@ -7,5 +7,5 @@
 }
 
 .summary-item-price {
-    align-self: end;
+    text-align: end;
 }
