--- a/src/styles/Item-card.css
+++ b/src/styles/Item-card.css
@@ -1,21 +1,22 @@
 .item-card {
-    /* background-color: beige; */
-    /* padding: 0.5rem; */
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
-    /* width: 100%; */
-    /* width: clamp(100px, 20vw, 200px); */
+    
 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1),
                 0 8px 16px rgba(0, 0, 0, 0.1);
 
     justify-content: space-between;
+    height: 100%;
 }
 
 .product-name {
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    justify-content: center; */
+    flex-grow: 1;
+    word-break: break-word;
+    min-width: 0;
 }
 
 .card-image{
@@ -30,7 +31,8 @@
 
 .description {
     display: flex;
-    gap: 1rem;
+    flex-direction: column;
+    /* gap: 0.2rem; */
     padding: 0 1rem;
     justify-content: space-between;
 
@@ -38,7 +40,12 @@
 }
 
 .price {
-    align-content: center;
+    align-content: right;
+    white-space: nowrap;
+    flex-shrink: 0; 
+    flex-basis: auto;
+    text-align: end;
+    margin-bottom: 0.2rem;
 }
 
 .quantity-cart-button {
